src/index.css
#root {
    height: 100%;
    display: flex;
    flex-direction: column;
}

#toolbar {
    justify-content: space-between;
    display: flex;
    height: 1px;
}

#headerLeft {
    order: 1;
    flex: 1;
    opacity: 1;
    overflow: hidden;
    min-width: auto;
    max-width: fit-content;
    transition:all 0.1s ease;
    -webkit-transition: all 0.1s ease;
    -moz-transition: all 0.1s ease;
    -o-transition: all 0.1s ease;
}

#headerRight {
    order: 3;
    flex: 1;
    opacity: 1;
    overflow: hidden;
    min-width: fit-content;
    max-width: fit-content;
    transition:all 0.1s ease;
    -webkit-transition: all 0.1s ease;
    -moz-transition: all 0.1s ease;
    -o-transition: all 0.1s ease;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
    #headerRight {
        flex: inherit;
    }

    #headerLeft {
        flex: inherit;
    }
}

@supports (-ms-accelerator:true) {
    #headerRight {
        flex: inherit;
    }

    #headerLeft {
        flex: inherit;
    }
}

@supports (-ms-ime-align:auto) {
    #headerRight {
        flex: inherit;
    }

    #headerLeft {
        flex: inherit;
    }
}

#headerSearch {
    max-width: 100%;
    order: 2;
    flex: 0.1;
    margin-left: auto;
    padding-right: 20px;
    margin-bottom: 8px;
    transition:flex 0.3s ease;
    -webkit-transition: flex 0.3s ease;
    -moz-transition: flex 0.3s ease;
    -o-transition: flex 0.3s ease;
}

#headerSearch svg {
    width: 1em;
    height: 1em;
}

#headerSearch:focus-within {
    flex: 1;
    padding-right: 0;
}

#headerSearch:focus-within ~ div {
    min-width: 0;
    flex: 0;
    opacity: 0;
}

#headerSearch fieldset {
    background: white;
}

#headerSearch .autoSuggestField {
    z-index: 1;
    padding-top: 7px !important;
    padding-left: 7px !important;
}

#headerSearch .autoSuggestField :last-child span {
    background: transparent;
}

#headerSearch .paper {
    border-radius: 4px;
}

.searchCaption {
    padding-right:4px;
}

.dropdownIndicator {
    color: gray;
    margin-top: 8px;
    margin-left: 5px;
    margin-right: 8px;
    margin-bottom: 5px;
}

.dropdownIndicator svg {
    width: 0.8em;
    height: 0.8em;
}

.appTitle {
    flex-shrink: 1;
    padding-top: 10px;
    padding-left: 15px;
    padding-right: 15px;
    float: right;
    max-width: calc(100% - 50px);
}

.appTitle > a {
    color: white;
    text-decoration: none;
}

.appTitle > a:hover {
    color: lightsteelblue;
    text-decoration: none;
}

.grow {
    flex-grow: 1;
}

#main {
    display: flex;
    height: calc(100vh - 89px);
    justify-content: flex-end;
}

#drawer {
    margin-right: 1px;
    width: 20%;
    transition: all 150ms ease-in-out !important;
    height: 100%;
    box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 2px 1px -1px rgba(0,0,0,0.12);
}

.drawer-close {
    width: 0 !important;
}

#drawer > div {
    width: 100%;
    position: inherit;
}

#content {
    box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 2px 1px -1px rgba(0,0,0,0.12);
    height: 100%;
    flex-grow: 1;
}

#content > div {
    overflow: auto;
    height: 100%;
    box-shadow: none;
}

.speedDialContainer {
    float: right;
}

.speedDial {
    bottom: 15px;
    right: 15px;
    position: fixed;
    align-self: end;
}

#footer {
    height: 20px;
    display: flex;
    flex-direction: row-reverse;
    padding-top: 3px;
}

.spanLink {
    padding-left: 10px;
    padding-right: 10px;
    color: blue;
}

.spanLink:hover {
    cursor: pointer;
}

#loginForm {
    width: 100%;
    display: flex;
    align-content: center;
    justify-content: center;
    margin-top: 10%;
}

#loginForm > div {
    display: flex;
    flex-direction: column;
}

#loginButtons {
    margin-top: 24px;
    margin-left: 20%;
}

.details {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap-reverse;
    justify-content: center;
    padding-bottom: 2% !important;
}

.detailsPaper {
    margin-top: 10px !important;
    width: auto !important;
    flex-shrink: 0;
    margin-right: -3px !important;
}

.media {
    align-self: center;
    margin-top: 10px !important;
    height: 55vh !important;
    width: 47.5vh !important;
    flex-shrink: 0;
}

/*
  ##Device = Desktops
  ##Screen = 1281px to higher resolution desktops
*/
@media (min-width: 1281px) {
    .issuePreview {
        margin-bottom: 10px;
        min-width: 40vw;
        max-width: 40vw;
    }

    .exclusiveToggle {
        float: right;
        margin-top: 6px !important;
        margin-left: auto !important;
    }

    #headerSearch:hover:not(:focus-within){
        flex: 0.3;
    }
}

/*
  ##Device = Laptops, Desktops
  ##Screen = B/w 1025px to 1280px
*/
@media (min-width: 1025px) and (max-width: 1280px) {
    .issuePreview {
        margin-bottom: 10px;
        min-width: 40vw;
        max-width: 40vw;
    }

    .exclusiveToggle {
        margin-top: 6px !important;
        margin-left: -14px !important;
    }

    #headerSearch:hover and #headerSearch:not(:focus-within){
        flex: 0.3;
    }
}
/* ... */

